1.5/backend-multitool.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: multitool-back
spec:
  selector:
    matchLabels:
      app: mtool-app
  template:
    metadata:
      labels:
        app: mtool-app
    spec:
      containers:
        - name: multitool
          image: wbitt/network-multitool
          ports:
            - containerPort: 8080
