1.5/frontend-nginx.yml
apiVersion: v1
kind: Deployment
metadata: 
  name: nginx-front
  spec:
  replicas: 3
  selector: 
    match_label: 
      labels:
        app: nginx-app
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
          containerPort: 80
