1.5/svc-back-mtool.yml
apiVersion: v1
kind: Service
metadata:
  name: multitool-back
spec:
  selector:
    app: mtool-app
  ports:
    - name: mtool
      port: 80
