1.5/svc-front-nginx.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-front
spec:
  selector:
    app: nginx-front
  ports:
    - name: nginx
      port: 80
