1.5/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-front
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: multitool-back
                port:
                  number: 80
